[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
vstd = { git = "https://github.com/verus-lang/verus", rev = "cf72bcc79df1629e8aa82233a389101918a2cac7" }
builtin = { git = "https://github.com/verus-lang/verus", rev = "cf72bcc79df1629e8aa82233a389101918a2cac7" }
builtin_macros = { git = "https://github.com/verus-lang/verus", rev = "cf72bcc79df1629e8aa82233a389101918a2cac7" }
sl = { path = "../sl" }

[package.metadata.verus]
verify = true
