[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
vstd = { git = "https://github.com/verus-lang/verus" }
builtin = { git = "https://github.com/verus-lang/verus" }
builtin_macros = { git = "https://github.com/verus-lang/verus" }
sl = { path = "../sl" }

[package.metadata.verus]
verify = true
