[package]
name = "sl"
version = "0.1.0"
edition = "2021"

[dependencies]
# vstd = { git = "https://github.com/verus-lang/verus" }
# builtin = { git = "https://github.com/verus-lang/verus" }
# builtin_macros = { git = "https://github.com/verus-lang/verus" }
# state_machines_macros = { git = "https://github.com/verus-lang/verus" }
vstd           = { path = "/home/nickolai/refsrc/verus/source/vstd" }
builtin        = { path = "/home/nickolai/refsrc/verus/source/builtin" }
builtin_macros = { path = "/home/nickolai/refsrc/verus/source/builtin_macros" }
state_machines_macros = { path = "/home/nickolai/refsrc/verus/source/state_machines_macros" }

[package.metadata.verus]
verify = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)'] }
